--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.7
+django-rest-framework-nested==0.0.1
 djangorestframework==3.12.2
 html5lib==1.0.1
 idna==2.8
